// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News Block when isLoading is false should render shallow render only when hoverIn is false 1`] = `
.c2 {
  height: 0;
  width: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  position: relative;
  background-color: rgba(255,255,255,1);
  overflow-y: scroll;
  overflow-x: hidden;
  box-shadow: -3px 1px 9px 0px #adadad;
}

.c1 {
  z-index: 100;
}

.c0 {
  overflow: hidden;
  position: absolute;
}

<div>
  <div
    class="c0"
  >
    <div
      class="loaded "
    >
      <div
        class="c1"
      >
        News...length =0
      </div>
      <div
        class="showOff c2"
      >
        No news!
      </div>
    </div>
  </div>
</div>
`;

exports[`News Block when isLoading is false should render shallow render only when hoverIn is true 1`] = `
.c2 {
  height: 0;
  width: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  position: relative;
  background-color: rgba(255,255,255,1);
  overflow-y: scroll;
  overflow-x: hidden;
  box-shadow: -3px 1px 9px 0px #adadad;
}

.c1 {
  z-index: 100;
}

.c0 {
  overflow: hidden;
  position: absolute;
}

<div>
  <div
    class="c0"
  >
    <div
      class="loaded "
    >
      <div
        class="c1"
      >
        News...length =0
      </div>
      <div
        class="showOn c2"
      >
        No news!
      </div>
    </div>
  </div>
</div>
`;

exports[`News Block when isLoading is true should render only Loader 1`] = `
.c0 {
  position: fixed;
  top: 16px;
  right: 0;
  text-align: center;
}

<div>
  <div
    className="c0"
  >
    Loading...
  </div>
</div>
`;

exports[`News Block when isLoading is true should render shallow render only 1`] = `
.c0 {
  position: fixed;
  top: 16px;
  right: 0;
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    Loading...
  </div>
</div>
`;
